--- a/templates/tiendas/add_tienda.html
+++ b/templates/tiendas/add_tienda.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>tiendas</title>
-    </head>
+{% extends "tiendas/base.html" %}
+{% block body_block %}
+{% if zona %}
 
-    <body>
-        <h1>Add a tienda</h1>
 
-        <form id="tienda_form" method="post" action="/tiendas/add_tienda/{{zona.nombre}}/">
-
+        <form role="form"  id="tienda_form" method="post" action="/tiendas/add_tienda/{{zona.slug}}/" enctype="multipart/form-data">
+            <h2 class="form-signin-heading">Añade tienda a <a href="/tiendas/mostrartiendas/{{zona.slug}}/"> {{ zona.nombre }}</a></h2>
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
             {% endfor %}
 
             {% for field in form.visible_fields %}
-                {{ field.errors }}
+                <br>{{ field.errors }}
                 {{ field.help_text }}
                 {{ field }}
             {% endfor %}
 
-            <input type="submit" name="submit" value="Create Tienda" />
-        </form>
-    </body>
 
-</html>
+            <br/>
+            <button class="btn btn-primary" type="submit" name="submit">Añadir tienda</button>
+        </form>
+        {% else %}
+        <p>Esta zona no existe.</p>
+        {%  endif %}
+{% endblock %}
+
