--- a/templates/tiendas/add_zona.html
+++ b/templates/tiendas/add_zona.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>tiendas</title>
-    </head>
+{% extends "tiendas/base.html" %}
+{% load staticfiles %}
+{% block body_block %}
+        <h1>Añade zona</h1>
 
-    <body>
-        <h1>Add a Category</h1>
-
-        <form id="category_form" method="post" action="/tiendas/add_zona/">
-
+        <form role="form"  id="category_form" method="post" action="/tiendas/add_zona/" enctype="multipart/form-data">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
             {% endfor %}
 
             {% for field in form.visible_fields %}
-                {{ field.errors }}
+                <br>{{ field.errors }}
                 {{ field.help_text }}
                 {{ field }}
             {% endfor %}
 
-            <input type="submit" name="submit" value="Create Category" />
-        </form>
-    </body>
 
-</html>
+            <br/>
+            <button class="btn btn-primary" type="submit" name="submit">Añadir zona</button>
+        </form>
+
+
+ {% endblock %}
