--- a/templates/tiendas/index.html
+++ b/templates/tiendas/index.html
@@ -1,17 +1,64 @@
-s<!DOCTYPE html>
 {% extends "tiendas/base.html" %}
-{% block title %}Mi tienda{% endblock %}
-{% block zona %}
-{% if zonas %}
+
+{% load staticfiles %}
+
+{% block title %}Index{% endblock %}
+
+
+{% block body_block %}
 {% if user.is_authenticated %}
-<ul>
-    {% for zona in zonas %}
-    <li><a href="/tiendas/mostrartiendas/{{ zona.nombre }}/">{{ zona.nombre }}</a></li>
-    {% endfor %}
-</ul>
-{% else %}
-{% endif %}
-{% else %}
-The specified category ggg{{ zona_nombre }} does not exist!
-{% endif %}
+<div class="page-header">
+
+  <h1>Bienvenido a tu tienda online {{ user.username }}!</h1>
+  {% else %}
+  <h1>Necesitas loguearte para poder usar la página</h1>
+  {% endif %}
+</div>
+
+<div class="row placeholders">
+  <div class="col-xs-12 col-sm-6 placeholder">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3><p>Zonas</p></h3>
+      </div>
+    </div>
+
+    {% if zonas %}
+    <ul class="list-group">
+      {% for zona in zonas %}
+      <li class="list-group-item"><a href="{% url 'tienda'  zona.slug %}">{{ zona.nombre }}</a></li>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <strong>No hay zonas disponibles.</strong>
+    {% endif %}
+  </div>
+
+
+  <div class="col-xs-12 col-sm-6 placeholder">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3>Tiendas</h3>
+      </div>
+    </div>
+
+    {% if tiendas %}
+    <ul class="list-group">
+      {% for tienda in tiendas %}
+      <li class="list-group-item"><a href="{% url 'au_v_tienda' tienda.slug %}">{{ tienda.zona.nombre }} ==> {{ tienda.nombre }}  {{ tienda.views }} visitas</a></li>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <strong>No hay tiendas disponibles.</strong>
+    {% endif %}
+  </div>
+
+  <div id="container" style="height: 300px"></div>
+
+
+</div>
+
+
+
+<p> visits: {{ visits }}</p>
 {% endblock %}
